Opened 14 years ago
Closed 14 years ago
#2183 closed defect (fixed)
dsputil_mmx.c "gmc_mmx undeclared" when configuring with --disable-everything
| Reported by: | jamal | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avcodec |
| Version: | git-master | Keywords: | dsputil regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description
Summary of the bug:
CC libavcodec/x86/dsputil_mmx.o /home/jamrial/ffmpeg/libavcodec/x86/dsputil_mmx.c: In function 'dsputil_init_mmx': /home/jamrial/ffmpeg/libavcodec/x86/dsputil_mmx.c:2053:14: error: 'gmc_mmx' undeclared (first use in this function) /home/jamrial/ffmpeg/libavcodec/x86/dsputil_mmx.c:2053:14: note: each undeclared identifier is reported only once for each function it appears in
How to reproduce:
./configure --disable-everything
This only happens with an x86_32 target.
Change History (3)
comment:1 by , 14 years ago
| Component: | undetermined → avcodec |
|---|---|
| Keywords: | regression added |
| Status: | new → open |
comment:3 by , 14 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Should be fixed, thank you for the report!
Note:
See TracTickets
for help on using tickets.



Regression since f023003, patch on ffmpeg-devel.