Fix compilation with --disable-everything on x86_32.

Fixes ticket #2183.